--- a/pom.xml
+++ b/pom.xml
@@ -49,12 +49,12 @@
             <version>1.0.1-beta6</version>
         </dependency>
 
-        <!--        &lt;!&ndash;        AiServices相关的依赖&ndash;&gt;-->
-        <!--        <dependency>-->
-        <!--            <groupId>dev.langchain4j</groupId>-->
-        <!--            <artifactId>langchain4j-spring-boot-starter</artifactId>-->
-        <!--            <version>1.0.1-beta6</version>-->
-        <!--        </dependency>-->
+        <!--        AiServices相关的依赖-->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-spring-boot-starter</artifactId>
+            <version>1.0.1-beta6</version>
+        </dependency>
 
         <!--        &lt;!&ndash;        引入流式调用相关的依赖&ndash;&gt;-->
         <!--        <dependency>-->
