--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,25 @@
             <artifactId>langchain4j-easy-rag</artifactId>
             <version>1.10.0-beta18</version>
             <scope>compile</scope>
+
+            <!--        把TIKA删除，防止依赖不兼容-->
+            <exclusions>
+                <exclusion>
+                    <groupId>dev.langchain4j</groupId>
+                    <artifactId>langchain4j-document-parser-apache-tika</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
+<!--        pdf解析器依赖-->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
+            <version>1.10.0-beta18</version>
+            <scope>compile</scope>
+        </dependency>
+
+
 
         <!--        引入lombok依赖-->
         <dependency>
